# pagurus

./: .gitignore  CHANGELOG.md  CHANGES.md  Cargo.toml  OLD_CHANGES.md  README.md  package-lock.json
.github/workflows/: ci.yml
examples/android_snake/: Cargo.toml
examples/android_snake/src/: lib.rs
examples/sdl_runtime/: Cargo.toml
examples/sdl_runtime/src/: main.rs
examples/sdl_snake/: Cargo.toml
examples/sdl_snake/src/: main.rs
examples/snake/: Cargo.toml
examples/snake_game/: Cargo.toml
examples/snake_game/src/: assets.rs  audio.rs  game.rs  lib.rs  main.rs  stages.rs  state.rs  widgets.rs
examples/snake_game/web/: index.html
examples/tui_runtime/: Cargo.toml
examples/tui_runtime/src/: main.rs
examples/web_snake/: index.html
examples/windows_runtime/: Cargo.toml
examples/windows_runtime/src/: main.rs
examples/windows_snake/: Cargo.toml
examples/windows_snake/src/: main.rs
pagurus_android_runtime/: Cargo.toml
pagurus_android_system/: Cargo.toml  README.md
pagurus_android_system/src/: event.rs  io_thread.rs  lib.rs  system.rs  window.rs
pagurus_game_std/: Cargo.toml  README.md
pagurus_game_std/src/: audio.rs  color.rs  image.rs  lib.rs  logger.rs  ogg.rs  png.rs  random.rs  wasm.rs  window.rs
pagurus_runtime_std/: Cargo.toml
pagurus_runtime_std/src/: wasm.rs
pagurus_runtime_std/src/wasm/: bytes.rs  convert.rs  env.rs  ffi.rs  game.rs
pagurus_sdl_runtime/: Cargo.toml
pagurus_sdl_runtime/src/: event.rs  system.rs
pagurus_sdl_system/: Cargo.toml  README.md
pagurus_sdl_system/src/: event.rs  input.rs  lib.rs  system.rs
pagurus_tui_system/: Cargo.toml  README.md
pagurus_tui_system/src/: event.rs  io.rs  lib.rs  system.rs
pagurus_wasmer/: Cargo.toml  README.md
pagurus_wasmer/src/: bytes.rs  convert.rs  ffi.rs  game.rs  lib.rs
pagurus_web/: README.md  package-lock.json  package.json  rollup.config.js
pagurus_web/src/: audio_worklet_processor.ts  event.ts  failure.ts  game.ts  pagurus.ts  spatial.ts  system.ts
pagurus_windows_system/: Cargo.toml  README.md
pagurus_windows_system/src/: audio.rs  lib.rs  system.rs  window.rs
src/: audio.rs  color.rs  event.rs  failure.rs  fixed_window.rs  i18n.rs  image.rs  input.rs  io.rs  lib.rs  logger.rs  random.rs  resource.rs  spatial.rs  timeout.rs  video.rs  wasm.rs
tui/: Cargo.toml  README.md
tui/src/: audio.rs  lib.rs  video.rs
web/: package-lock.json  package.json  rollup.config.mjs  tsconfig.json
web/src/: audio_worklet_processor.ts  event.ts  game.ts  pagurus.ts  system.ts
