[package]
name = "pagurus"
version = "0.5.0"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Ultra-portable game engine suited for offline 2D games powered by WebAssembly"
homepage = "https://github.com/sile/pagurus"
repository = "https://github.com/sile/pagurus"
readme = "README.md"

[features]
logger = ["log"]

[dependencies]
log = { version = "0.4", features = ["std"], optional = true }
orfail = "0.1"


[target.'cfg(target_arch = "wasm32")'.dependencies.orfail]
features = ["serde"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde = { version = "1", features = ["derive"] }

[workspace]
members = [
    "pagurus_game_std",
    "pagurus_sdl_system",
    "pagurus_android_system",
    "pagurus_windows_system",
    "examples/android_snake",
    "examples/sdl_snake",
    "examples/windows_snake",
    "examples/snake_game",
]