[package]
name = "pagurus"
version = "0.5.0"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Ultra-portable game engine suited for offline 2D games powered by WebAssembly"
homepage = "https://github.com/sile/pagurus"
repository = "https://github.com/sile/pagurus"
readme = "README.md"

[features]
fixed_window = []
logger = ["log"]
randm = ["getrandom", "rand_chacha", "rand_core"]
wasm = ["orfail/serde", "serde", "serde_json"]

[target.'cfg(target_arch = "wasm32")'.features]
default = ["wasm"]

[dependencies]
getrandom = { version = "0.2", features = ["custom"], optional = true }
log = { version = "0.4", features = ["std"], optional = true }
orfail = "0.1"
rand_chacha = { version = "0.3", optional = true }
rand_core = { version = "0.6", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[workspace]
members = [
    "pagurus_game_std",
    "pagurus_sdl_system",
    "pagurus_android_system",
    "pagurus_windows_system",
    "examples/android_snake",
    "examples/sdl_snake",
    "examples/windows_snake",
    "examples/snake_game",
]