[package]
name = "pagurus"
version = "0.7.1"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Ultra-portable game engine suited for offline 2D games powered by WebAssembly"
homepage = "https://github.com/sile/pagurus"
repository = "https://github.com/sile/pagurus"
readme = "README.md"

[features]
fixed_window = []
image = []
random = ["getrandom", "rand_chacha", "rand_core"]
serde = ["dep:serde", "orfail/serde", "rand_chacha/serde1"]
wasm = ["serde", "serde_json"]

[dependencies]
getrandom = { version = "0.2", features = ["custom"], optional = true }
orfail = "0.1"
rand_chacha = { version = "0.3", optional = true }
rand_core = { version = "0.6", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[workspace]
members = [
    "tui",
    "examples/snake_game",
]