[package]
name = "pagurus_android_system"
version = "0.3.0"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Library to run Pagurus games on the Android platform"
homepage = "https://github.com/sile/pagurus"
repository = "https://github.com/sile/pagurus"
readme = "README.md"

[dependencies]
ndk = { version = "0.7", features = ["audio"] }
ndk-glue = "0.7"
ndk-sys = "0.4"
pagurus = { path = "../", version = "0.3" }
urlencoding = "2"
