[package]
name = "pagurus_game_std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2", features = ["custom"] }
log = { version = "0.4", features = ["std"] }
pagurus = { version = "0.1", path = "../" }
png = "0.17"
rand_chacha = "0.3"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
