[package]
name = "pagurus_game_std"
version = "0.4.0"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "The standard library to develop Pagurus games"
homepage = "https://github.com/sile/pagurus"
repository = "https://github.com/sile/pagurus"
readme = "README.md"

[features]
default = ["wasm", "ogg"]
wasm = []
ogg = ["lewton"]

[dependencies]
getrandom = { version = "0.2", features = ["custom"] }
lewton = { version = "0.10", optional = true }
log = { version = "0.4", features = ["std"] }
pagurus = { version = "0.4", path = "../" }
png = "0.17"
rand_chacha = "0.3"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
