[package]
name = "pagurus_sdl_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pagurus = { path = "../", version = "0.1" }
pagurus_runtime_std = { path = "../pagurus_runtime_std/", version = "0.1" }
sdl2 = "0.35"
