[package]
name = "pagurus_sdl_system"
version = "0.6.0"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Library to run Pagurus games using SDL 2.0"
homepage = "https://github.com/sile/pagurus"
repository = "https://github.com/sile/pagurus"
readme = "README.md"

[dependencies]
pagurus = { path = "../", version = "0.6" }
sdl2 = "0.35"
urlencoding = "2"
