[package]
name = "pagurus_tui_system"
version = "0.5.0"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Library to run Pagurus games on a terminal"
homepage = "https://github.com/sile/pagurus"
repository = "https://github.com/sile/pagurus"
readme = "README.md"

[dependencies]
pagurus = { path = "../", version = "0.5" }
viuer = "0.6.1"
urlencoding = "2"
image = "0.24.2"
termion = "1.5.6"
