[package]
name = "pagurus_wasmer"
version = "0.4.0"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Library to load and run Pagurus games built to WebAssembly files using Wasmer"
homepage = "https://github.com/sile/pagurus"
repository = "https://github.com/sile/pagurus"
readme = "README.md"

[dependencies]
pagurus = { path = "../", version = "0.4" }
serde = "1"
serde_json = "1"
wasmer = "2"
