[package]
name = "pagurus_windows_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pagurus = { path = "../", version = "0.3" }
urlencoding = "2"
windows = { version = "0.42.0", features = [
                                            "Win32_Foundation",
                                            "Win32_Graphics_Gdi",
                                            "Win32_System_LibraryLoader",
                                            "Win32_UI_WindowsAndMessaging",
                                            ] }
