[package]
name = "pagurus_windows_system"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pagurus = { path = "../", version = "0.4" }
urlencoding = "2"

[dependencies.windows]
version = "0.42.0"
features = [
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media_Audio_XAudio2",
]
