[package]
name = "pagurus_windows_system"
version = "0.6.0"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Library to run Pagurus games on Windows"
homepage = "https://github.com/sile/pagurus"
repository = "https://github.com/sile/pagurus"
readme = "README.md"

[dependencies]
pagurus = { path = "../", version = "0.6" }
urlencoding = "2"

[dependencies.windows]
version = "0.42.0"
features = [
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media_Audio_XAudio2",
]
