[package]
name = "pagurus_tui"
version = "0.7.3"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "library to run Pagurus games on a terminal"
homepage = "https://github.com/sile/pagurus"
repository = "https://github.com/sile/pagurus"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pagurus = { version = "0.7.0", path = "../" }
termion = "2.0.1"
