[package]
name = "pagurus_tui"
version = "0.7.5"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "library to run Pagurus games on a terminal"
homepage = "https://github.com/sile/pagurus"
repository = "https://github.com/sile/pagurus"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[features]
default = ["video", "audio"]
video = ["termion"]
audio = ["libpulse-binding", "libpulse-simple-binding"]

[dependencies]
libpulse-binding = { version = "2.28.1", optional = true }
libpulse-simple-binding = { version = "2.28.1", optional = true }
orfail = "1"
pagurus = { version = "0.7.0", path = "../" }
termion = { version = "2.0.1", optional = true }
