[package]
name = "android_snake"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
ndk-glue = "0.6"
pagurus = { path = "../../", version = "0.1" }
pagurus_android_system = { path = "../../pagurus_android_system/", version = "0.1" }
pagurus_wasmer = { path = "../../pagurus_wasmer/", version = "0.1" }

[package.metadata.android]
apk_name = "snake"

[package.metadata.android.sdk]
min_sdk_version = 26

[package.metadata.android.application]
label = "Snake"
