[package]
name = "sdl_runtime"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
pagurus = { path = "../../", version = "0.3" }
pagurus_sdl_system = { path = "../../pagurus_sdl_system/", version = "0.3" }
pagurus_wasmer = { path = "../../pagurus_wasmer/", version = "0.3" }
