[package]
name = "sdl_snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pagurus = { path = "../../", version = "0.5" }
pagurus_sdl_system = { path = "../../pagurus_sdl_system/", version = "0.5" }
pagurus_wasmer = { path = "../../pagurus_wasmer/", version = "0.5" }
