[package]
name = "snake_game"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
ffmml = "0.1"
log = "0.4.17"
pagurus = {  path = "../../", features = ["fixed_window", "image", "random", "wasm"] }
png = "0.17.7"
rand = "0.8"
