[package]
name = "windows_runtime"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
pagurus = { path = "../../", version = "0.5" }
pagurus_windows_system = { path = "../../pagurus_windows_system/", version = "0.5" }
pagurus_wasmer = { path = "../../pagurus_wasmer/", version = "0.5" }
