[package]
name = "windows_snake"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
pagurus = { path = "../../" }
pagurus_windows_system = { path = "../../pagurus_windows_system/" }
snake_game = { path = "../snake_game/" }
